syntax = "proto3";

package onight.zjfae.afront.gens.v2;
option java_outer_classname="ForgetCheckUserNamePb";
//Generated By BrewRobot:Tue Sep 05 14:17:25 CST 2017

message PBIFE_forgetpasswordmanage_checkUsername{
	///ife/forgetpasswordmanage/checkUsername.html


}

message Ret_PBIFE_forgetpasswordmanage_checkUsername{
	///ife/forgetpasswordmanage/checkUsername.html

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_forgetpasswordmanage_checkUsername data=3;


}

message REQ_PBIFE_forgetpasswordmanage_checkUsername{
	///ife/forgetpasswordmanage/checkUsername.html

	string username = 1; //,用户名,String,不校验,否,

	string imageCode = 2; //,图片验证码,String,不校验,否,

	string certificateCode = 3; //,证件号码,String,不校验,否,

	string version = 4; //,版本号,String,不校验,否,1.0.1


}