syntax = "proto3";

package onight.zjfae.afront.gens;
option java_outer_classname="Register";

//Generated By BrewRobot:Wed May 17 16:13:05 CST 2017

message PBIFE_reg_register_new{
	///ife/reg/register.html

	string authCode = 1; //,图片验证码,String,4,否,,
	string fundAccount = 2;//,资金账号,String,4,否,,
	string account = 3;//,资金账号,String,4,否,,


}

message Ret_PBIFE_reg_register_new{
	///ife/reg/register.html

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_reg_register_new data=3;


}

message REQ_PBIFE_reg_register_new{
	///ife/reg/register.html

	string mobile = 1; //,手机号,String,11,否,,

	string imageCode = 2; //,图片验证码,String,5,否,,

	string checkCode = 3; //,手机验证码,String,5,否,,

	string loginPassword = 4; //,登录密码,String,不校验,否,,

	string loginPasswordSure = 5; //,登陆密码第二次输入,String,不校验,否,,

	string channelNo = 6; //,号渠道编,String,不校验,否,,

	string recommendMobile = 7; //,推荐人手机号,String,11,是,,

	string registeredDeviceId = 8; //,用户注册的设备ID,String,不校验,否,

	string registeredSystem = 9; //,用户注册的操作系统,String,是,

	string registeredModel = 10; //,用户注册的型号,String,,是,

	string clientIp =11; //,用户注册的Ip,String,是,

	string longitude = 12; //,GPS用户位置信息经度

	string latitude = 13; //,GPS用户位置信息纬度

	string routingAddress =14; //,路由地址

	string phoneNum= 15; //当前用户手机号

	string getStatus = 16; //,手机号获取状态,1，获取成功，2，不能获取，3，获取失败

	string locationInfo = 17;//,用户登录详细地址,String,不校验,否

	string brokerNo=18;//,渠道编号

	string version=19;//,版本号，新版本传1.0.1，老版本不传

}